fix: topbar caused the x overflow to show

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -140,6 +140,6 @@
 }
 
 .fonts>.listing-topbar {
-  width: 100%;
+  width: 98%;
   border-bottom: 1px solid rgb(27, 27, 27);
 }
